--- a/src/app/components/menu-bar/menu-bar.component.html
+++ b/src/app/components/menu-bar/menu-bar.component.html
@@ -11,8 +11,8 @@
 	<div class="menu-bar__item">
 		<ul>
 			<li><a href="#">YOUTUBE</a></li>
-			<li><a href="#">LINKEDIN</a></li>
-			<li><a href="#">GITHUB</a></li>
+			<li><a target="_blank" href="https://www.linkedin.com/in/elizeu-medeiros">LINKEDIN</a></li>
+			<li><a target="_blank" href="https://elizeu-medeiros.github.io/portfolio/">GITHUB</a></li>
 		</ul>
 	</div>
 </div>
